# capnprof

./: .gitmodules  CMakeLists.txt  Makefile
src/: heatmap.hh  main.cc  prof.cc  prof.hh  stats.cc  stats.hh  trace.cc  trace.hh
tests/: test_prof.cc
tests/res/: test.capnp
